# mod_ical

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  config.h.in  configure.ac  mod_ical.c  mod_ical.spec  mod_ical.spec.in  mod_ical.xml
debian/: changelog  control  copyright
